Update Scala project: modified build.sbt, removed old outputs, and adjusted project structure